# vimbedded

./: .clangd  CMakeLists.txt  run-build.sh
.cache/clangd/index/: main.cpp.B3A2AF35C7B2B616.idx
launcher/: .clang-format
launcher/src/: main.cpp
src/: gdb.cpp  main.cpp
src/include/: gdb.hpp
utility/: cloc.sh
vimbedded-core/: .clangd  CMakeLists.txt  openocd.cfg  run-build.sh
vimbedded-core/src/: cli.cpp  main.cpp
vimbedded-core/src/include/: cli.hpp
vimbedded-gui/: .gitignore  package-lock.json  package.json
vimbedded-gui/electron/: tsconfig.json
vimbedded-gui/electron/src/: appConstants.ts  exposeNode.ts  main.ts  preload.ts  preloadLauncher.ts
vimbedded-gui/gui-angular/: angular.json  package-lock.json  package.json
vimbedded-gui/gui-angular/projects/app/src/: index.html
vimbedded-gui/gui-angular/projects/app/src/app/: app.component.ts  app.config.ts
web/: package-lock.json  package.json
web/src/: index.html  styles.css
web/src/app/: app.component.html  app.component.ts  connection-state.service.spec.ts  connection-state.service.ts  search-reccomendations.service.spec.ts  search-reccomendations.service.ts  svd-parser.service.spec.ts  svd-parser.service.ts
web/src/app/navbar/: navbar.component.css  navbar.component.html  navbar.component.ts
web/src/app/registers/: registers.component.css  registers.component.html  registers.component.ts
web/src/app/registers/periphrial-group/: periphrial-group.component.css  periphrial-group.component.html  periphrial-group.component.spec.ts  periphrial-group.component.ts
web/src/app/registers/periphrial-group/register/: register.component.ts
